tests/NormalTests/paczka1/fuzzy1/55160444.err
Error in line 1: 7evTNTbze A157 82,6
Error in line 7: 1seGY4 S606 4,6
Error in line 19: ztIo0Mor A157 -1,7
Error in line 16: 1seGY4 S223 52,1
Error in line 17: 696oaxlSb S4 50,1
Error in line 21: 1seGY4 S606 46,1
Error in line 18: ghMT50tHQt S223 66,2
Error in line 9: ztIo0Mor A157 31,6
